fixes with Dan's help

--- a/app/views/hearings/pages/language.html
+++ b/app/views/hearings/pages/language.html
@@ -61,7 +61,7 @@ Case details
 
                                                     <div class="govuk-radios__conditional govuk-!-padding-bottom-1 govuk-!-padding-top-3" style="display:none;" id="ra1">
                                                         <div class="govuk-form-group"style="width: 600px;">
-                                                            <label class="govuk-label govuk-label-m govuk-!-font-weight-bold" for="more-detail">
+                                                            <label class="govuk-label govuk-label-m govuk-!-font-weight-bold" >
                                                                 Select the reasonable adjustments required
                                                             </label>
 
@@ -122,7 +122,7 @@ Case details
 
                                                     <div class="govuk-radios__conditional govuk-!-padding-bottom-1 govuk-!-padding-top-3" style="display:none;" id="ra2">
                                                         <div class="govuk-form-group"style="width: 600px;">
-                                                            <label class="govuk-label govuk-label-m govuk-!-font-weight-bold" for="more-detail">
+                                                            <label class="govuk-label govuk-label-m govuk-!-font-weight-bold" >
                                                                 Select the reasonable adjustments required
                                                             </label>
 
@@ -154,7 +154,7 @@ Case details
                                                                 </div>
                                                                 <div class="govuk-checkboxes__item"  onclick="toggleraother2();">
                                                                     <input class="govuk-checkboxes__input" id="ra25radio" name="raradio2" type="checkbox" value="Anything else"  onclick="toggleraother2(); toggleraother2();" >
-                                                                    <label class="govuk-label govuk-checkboxes__label" for="ra5radio" onclick="toggleraother1();"  >
+                                                                    <label class="govuk-label govuk-checkboxes__label" for="ra25radio" onclick="toggleraother1();"  >
                                                                         Anything else
                                                                     </label>
                                                                 </div>
