--- a/app/views/hearings/pages/timing.html
+++ b/app/views/hearings/pages/timing.html
@@ -28,7 +28,7 @@ Case details
                                 <fieldset class="govuk-fieldset" aria-describedby="contact-hint">
                                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
                                         <h3 class="govuk-fieldset__heading">
-                                            Select a time
+                                            Select a time (optional)
                                         </h3>
                                     </legend>
                                     <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
@@ -66,7 +66,7 @@ Case details
                                 <fieldset class="govuk-fieldset" aria-describedby="contact-hint">
                                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
                                         <h3 class="govuk-fieldset__heading">
-                                            Select length of hearing
+                                            Select length of hearing (optional)
                                         </h3>
                                     </legend>
                                     <div class="govuk-radios govuk-radios--conditional" data-module="govuk-radios">
@@ -81,7 +81,7 @@ Case details
                                         -->
 
                                         <div class="govuk-radios__item">
-                                            <input class="govuk-radios__input" id="duration2" name="durationradios" type="radio" value="30 minutes"  onclick="hideothertime()"  >
+                                            <input class="govuk-radios__input" id="duration2" name="durationradios" type="radio" value="30 minutes"  onclick="hideothertime()" checked >
                                             <label class="govuk-label govuk-radios__label" for="duration2" onclick="hideothertime()">
                                                 30 minutes
                                             </label>
@@ -126,7 +126,7 @@ Case details
                                                                 <label class="govuk-label govuk-date-input__label" for="passport-issued-day">
                                                                     Hours
                                                                 </label>
-                                                                <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="passport-issued-day" name="passport-issued-day" type="text" pattern="[0-9]*" inputmode="numeric"></div>
+                                                                <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="passport-issued-day" name="passport-issued-day" type="text" pattern="[0-9]*" inputmode="numeric" ></div>
                                                         </div>
                                                         <div class="govuk-date-input__item">
                                                             <div class="govuk-form-group">
