--- a/app/views/hearings/pages/venuedefault.html
+++ b/app/views/hearings/pages/venuedefault.html
@@ -82,7 +82,7 @@ Case details
 
                                                 <div class="govuk-radios__conditional govuk-!-padding-top-5 govuk-!-padding-bottom-5" id="conditionalra2box"  style="display:none;">
                                                     <label class="govuk-label govuk-label-m govuk-!-font-weight-bold" for="more-detail-adjustments-other-2">
-                                                        Enter the facilities are required
+                                                        Tell us what facilities are required
                                                     </label>
                                                     <textarea class="govuk-textarea" id="more-detail-adjustments-other-2" name="more-detail-adjustments-other-2" rows="3" aria-describedby="more-detail-hint"></textarea>
                                                 </div>
