--- a/app/views/hearings/pages/paneldifferent.html
+++ b/app/views/hearings/pages/paneldifferent.html
@@ -66,7 +66,7 @@ Case details
                                                     <br>
                                                     <fieldset class="govuk-fieldset">
                                                         <legend class="govuk-fieldset__legend  govuk-fieldset__legend--s ">
-                                                            Select a judge type
+                                                            Select a judge type (optional)
                                                         </legend>
                                                         <div class="govuk-radios">
                                                             <div class="govuk-radios__item">
@@ -232,7 +232,7 @@ Case details
                                 <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
                                     <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
                                         <h1 class="govuk-fieldset__heading">
-                                            Select any other panel roles required   &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;
+                                            Select any other panel roles required   (optional) &nbsp;  &nbsp;  &nbsp;  &nbsp;  &nbsp;
                                         </h1>
                                     </legend>
                                     <div id="waste-hint" class="govuk-hint">
